<resources>
    <string name="app_name">MediLink Evv</string>
    <string name="app_title">MediLink</string>
    <string name="android_sender">Android MediLink</string>
    <string name="CALLTYPE_IN">I</string>
    <string name="CALLTYPE_OUT">O</string>
    <string name="field_is_empty">Field is empty!</string>
    <string name="should_be_selected">In or Out should be select!</string>


    <string name="label_employee">Employee ID</string>
    <string name="label_client">Client ID</string>
    <string name="label_office">Office ID</string>
    <string name="label_tasks">Tasks</string>
    <string name="label_in_out">IN/OUT</string>
    <string name="label_date_time">Date/Time</string>
    <string name="bt_label_resend">resend</string>
    <string name="nfc_default_message">Scan the MediLink ID Card</string>
    <string name="shepherd_communication_inc_2020_version_1_0_0">Shepherd Communication, inc. 2020, Version 1.0.0</string>
    <string name="send_now">SEND NOW</string>
    <string name="count_message_visits_unsent">You have %d number of unsent visits</string>
    <string name="visit_history">Visit history:</string>
    <string name="out">OUT</string>
    <string name="in">IN</string>
    <string name="label_nfc">NFC</string>
    <string name="label_add_tasks">Add/Check Tasks</string>
    <string name="view_history_visits">View History Visits</string>
    <string name="duplicate_visit">Duplicate Visit</string>
    <string name="message_duplicate_visit">STOP! This visit appears to be a duplicate. Please view your history log.</string>
    <string name="error_message_length">%s: Should be between %d and %d digits!</string>
    <string name="nfc_not_enabled">NFC is not Enabled</string>
    <string name="message_turn_on_nfc">Please turn on your NFC feature to use the MediLink EVV app!</string>
    <string name="information">Information</string>
    <string name="message_sending_past_visit_background">We are sending %d past visits in background.</string>
    <string name="idAppCenter">e219356b-48da-4271-a40c-0609d2a9c4f3</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="enter_visit">Enter Visit</string>
    <string name="label_otp">OTP</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
